--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -1,221 +1,221 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="messages" date="2014-12-01T13:54:44Z">
+	<file source-language="en" datatype="plaintext" original="messages" date="2015-11-19T15:36:41Z">
 		<header>
 			<generator>LFEditor</generator>
 		</header>
 		<body>
-		<trans-unit id="tabs.notifications" xml:space="preserve">
+		<trans-unit id="tabs.notifications">
 			<source>Notifications</source>
 		</trans-unit>
-		<trans-unit id="tabs.participants" xml:space="preserve">
+		<trans-unit id="tabs.participants">
 			<source>Participants</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservation_domain_model_lesson.tab.participants" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservation_domain_model_lesson.tab.participants">
 			<source>Participants</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations.tx_extbase_type" xml:space="preserve">
-			<source>Record Type</source>
+		<trans-unit id="tx_dakosyreservations.tx_extbase_type">
+			<source>Event type</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations.tx_extbase_type.0" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations.tx_extbase_type.0">
 			<source>Default</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_audience" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_audience">
 			<source>Audience</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_audience.description" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_audience.description">
 			<source>Description</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_audience.title" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_audience.title">
 			<source>Title</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_company" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_company">
 			<source>Company</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_company.address" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_company.address">
 			<source>Address</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_company.city" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_company.city">
 			<source>City</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_company.country" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_company.country">
 			<source>Country</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_company.name" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_company.name">
 			<source>Name</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_company.zip" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_company.zip">
 			<source>Zip</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_course" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_course">
 			<source>Course</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_course.abstract" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_course.abstract">
 			<source>Abstract</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_course.audience" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_course.audience">
 			<source>Audience</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_course.lessons" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_course.lessons">
 			<source>Lessons</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_course.tab.extended" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_course.tab.extended">
 			<source>Details</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_course.tab.lessons" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_course.tab.lessons">
 			<source>Lessons</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_lesson" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_lesson">
 			<source>Lesson</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_lesson.deadline" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_lesson.deadline">
 			<source>Deadline</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_lesson.duration" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_lesson.duration">
 			<source>Duration</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_lesson.places" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_lesson.places">
 			<source>Places</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_lesson.price" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_lesson.price">
 			<source>Price</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_lesson.tab.extended" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_lesson.tab.extended">
 			<source>Details</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_lesson.tab.participants" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_lesson.tab.participants">
 			<source>Participants</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_notification" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_notification">
 			<source>Notification</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_notification.bodytext" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_notification.bodytext">
 			<source>Text</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_notification.format" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_notification.format">
 			<source>Format</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_notification.recipient" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_notification.recipient">
 			<source>Recipient</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_notification.reservation" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_notification.reservation">
 			<source>Reservation</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_notification.send_at" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_notification.send_at">
 			<source>Sent at</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_notification.sender" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_notification.sender">
 			<source>Sender</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_notification.subject" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_notification.subject">
 			<source>Subject</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_person" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_person">
 			<source>Person</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_person.address" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_person.address">
 			<source>Address</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_person.city" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_person.city">
 			<source>City</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_person.email" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_person.email">
 			<source>Email</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_person.first_name" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_person.first_name">
 			<source>First Name</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_person.gender" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_person.gender">
 			<source>Gender</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_person.gender.female" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_person.gender.female">
 			<source>Ms</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_person.gender.male" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_person.gender.male">
 			<source>Mr</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_person.name" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_person.name">
 			<source>Name</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_person.phone" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_person.phone">
 			<source>Phone</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_person.tx_extbase_type.Tx_DakosyReservations_Person" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_person.tx_extbase_type.Tx_DakosyReservations_Person">
 			<source>DAKOSY Reservations Person</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_person.type.contact" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_person.type.contact">
 			<source>Contact</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_person.type.empty" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_person.type.empty">
 			<source>-empty-</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_person.type.participant" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_person.type.participant">
 			<source>Participant</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_person.zip" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_person.zip">
 			<source>Zip</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_reservation" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_reservation">
 			<source>Reservation</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_reservation.company" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_reservation.company">
 			<source>Company</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_reservation.contact" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_reservation.contact">
 			<source>Contact</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_reservation.contactIsParticipant" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_reservation.contactIsParticipant">
 			<source>Contact is participant</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_reservation.lesson" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_reservation.lesson">
 			<source>Lesson</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_reservation.notifications" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_reservation.notifications">
 			<source>Notifications</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_reservation.offersAccepted" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_reservation.offersAccepted">
 			<source>Further offers accepted</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_reservation.participants" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_reservation.participants">
 			<source>Participants</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_reservation.privacyStatementAccepted" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_reservation.privacyStatementAccepted">
 			<source>Privacy statement accepted</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_reservation.status" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_reservation.status">
 			<source>Status</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_reservation.status.0" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_reservation.status.0">
 			<source>new</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_reservation.status.1" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_reservation.status.1">
 			<source>draft</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_reservation.status.2" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_reservation.status.2">
 			<source>submitted</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_reservation.status.3" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_reservation.status.3">
 			<source>canceled (no charge)</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_reservation.status.4" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_reservation.status.4">
 			<source>canceled (with costs)</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_reservation.status.5" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_reservation.status.5">
 			<source>closed</source>
 		</trans-unit>
-		<trans-unit id="tx_dakosyreservations_domain_model_reservation.status.6" xml:space="preserve">
+		<trans-unit id="tx_dakosyreservations_domain_model_reservation.status.6">
 			<source>canceled by DAKOSY</source>
 		</trans-unit>
-		<trans-unit id="tx_t3events_domain_model_event.tx_extbase_type.Tx_DakosyReservations_Course" xml:space="preserve">
+		<trans-unit id="tx_t3events_domain_model_event.tx_extbase_type.Tx_DakosyReservations_Course">
 			<source>Course</source>
 		</trans-unit>
-		<trans-unit id="tx_t3events_domain_model_event.tx_extbase_type.default" xml:space="preserve">
+		<trans-unit id="tx_t3events_domain_model_event.tx_extbase_type.default">
 			<source>Default</source>
 		</trans-unit>
-		<trans-unit id="tx_t3events_domain_model_genre" xml:space="preserve">
+		<trans-unit id="tx_t3events_domain_model_genre">
 			<source>Product</source>
 		</trans-unit>
-		<trans-unit id="tx_t3events_domain_model_performance.tx_extbase_type.Tx_DakosyReservations_Lesson" xml:space="preserve">
+		<trans-unit id="tx_t3events_domain_model_performance.tx_extbase_type.Tx_DakosyReservations_Lesson">
 			<source>Lesson</source>
 		</trans-unit>
 		</body>
