--- a/Resources/Private/Language/de.locallang_db.xlf
+++ b/Resources/Private/Language/de.locallang_db.xlf
@@ -1,17 +1,25 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" target-language="de" datatype="plaintext" original="messages" date="2015-12-14T17:21:08Z">
+	<file source-language="en" target-language="de" datatype="plaintext" original="messages" date="2015-12-15T13:42:46Z">
 		<header>
 			<generator>LFEditor</generator>
 		</header>
 		<body>
 		<trans-unit id="label.tx_extbase_type" approved="yes" xml:space="preserve">
 			<source>Event type</source>
-			<target>Typ</target>
+			<target>Veranstaltungstyp</target>
 		</trans-unit>
 		<trans-unit id="label.tx_extbase_type.Tx_T3eventsCourse_Course" approved="yes" xml:space="preserve">
 			<source>Course</source>
-			<target>Kurs</target>
+			<target>Weiterbildungsangebot</target>
+		</trans-unit>
+		<trans-unit id="label.tx_extbase_type.Tx_T3eventsCourse_Lesson" approved="yes" xml:space="preserve">
+			<source></source>
+			<target>Kurstermin</target>
+		</trans-unit>
+		<trans-unit id="label.tx_extbase_type.default" approved="yes" xml:space="preserve">
+			<source></source>
+			<target>Standard</target>
 		</trans-unit>
 		<trans-unit id="tab.exam_degree" approved="yes" xml:space="preserve">
 			<source></source>
@@ -23,14 +31,14 @@
 		</trans-unit>
 		<trans-unit id="tab.images" approved="yes" xml:space="preserve">
 			<source></source>
-			<target>Bilder und Testimonials</target>
+			<target>Bilder</target>
 		</trans-unit>
 		<trans-unit id="tab.participants" approved="yes" xml:space="preserve">
 			<source>Participants</source>
 			<target>Teilnehmer</target>
 		</trans-unit>
 		<trans-unit id="tab.performances" approved="yes" xml:space="preserve">
-			<source></source>
+			<source>Schedule, Registration and Price</source>
 			<target>Termin-, Anmelde- und Preisangaben</target>
 		</trans-unit>
 		<trans-unit id="tab.price" approved="yes" xml:space="preserve">
@@ -43,15 +51,11 @@
 		</trans-unit>
 		<trans-unit id="tab.relations" approved="yes" xml:space="preserve">
 			<source></source>
-			<target>Zielgruppen/Partner/Kontakte</target>
+			<target>Zielgruppen/Kontakte</target>
 		</trans-unit>
 		<trans-unit id="tab.visibility" approved="yes" xml:space="preserve">
 			<source></source>
 			<target>Sichtbarkeit und Export</target>
-		</trans-unit>
-		<trans-unit id="tx_t3events_domain_model_event.tx_extbase_type.Tx_T3eventsCourse_Course" approved="yes" xml:space="preserve">
-			<source></source>
-			<target>Weiterbildungsangebot</target>
 		</trans-unit>
 		<trans-unit id="tx_t3events_domain_model_event.tx_extbase_type.default" approved="yes" xml:space="preserve">
 			<source></source>
@@ -60,18 +64,6 @@
 		<trans-unit id="tx_t3events_domain_model_genre" approved="yes" xml:space="preserve">
 			<source>Product</source>
 			<target>Produkt</target>
-		</trans-unit>
-		<trans-unit id="tx_t3events_domain_model_performance.tx_extbase_type.Tx_T3eventsCourse_Lesson" approved="yes" xml:space="preserve">
-			<source></source>
-			<target>Kurstermin</target>
-		</trans-unit>
-		<trans-unit id="tx_t3events_domain_model_performance.tx_extbase_type.default" approved="yes" xml:space="preserve">
-			<source></source>
-			<target>Standard</target>
-		</trans-unit>
-		<trans-unit id="tx_t3eventscourse.tx_extbase_type" approved="yes" xml:space="preserve">
-			<source></source>
-			<target>Veranstaltungstyp</target>
 		</trans-unit>
 		<trans-unit id="tx_t3eventscourse_domain_model_certificate" approved="yes" xml:space="preserve">
 			<source>Certificate</source>
@@ -105,10 +97,6 @@
 			<source>Course</source>
 			<target>Schulung</target>
 		</trans-unit>
-		<trans-unit id="tx_t3eventscourse_domain_model_event.abstract" approved="yes" xml:space="preserve">
-			<source>Abstract</source>
-			<target>Übersicht</target>
-		</trans-unit>
 		<trans-unit id="tx_t3eventscourse_domain_model_event.archive_date" approved="yes" xml:space="preserve">
 			<source></source>
 			<target>Archivdatum</target>
@@ -116,10 +104,6 @@
 		<trans-unit id="tx_t3eventscourse_domain_model_event.audience" approved="yes" xml:space="preserve">
 			<source>Audience</source>
 			<target>Zielgruppe</target>
-		</trans-unit>
-		<trans-unit id="tx_t3eventscourse_domain_model_event.branch" approved="yes" xml:space="preserve">
-			<source></source>
-			<target>Branchen</target>
 		</trans-unit>
 		<trans-unit id="tx_t3eventscourse_domain_model_event.certificate" approved="yes" xml:space="preserve">
 			<source></source>
@@ -144,14 +128,6 @@
 		<trans-unit id="tx_t3eventscourse_domain_model_event.certificate_desc" approved="yes" xml:space="preserve">
 			<source></source>
 			<target>Sonstige Fördermöglichkeiten</target>
-		</trans-unit>
-		<trans-unit id="tx_t3eventscourse_domain_model_event.contact_person" approved="yes" xml:space="preserve">
-			<source></source>
-			<target>IHK-Ansprechpartner</target>
-		</trans-unit>
-		<trans-unit id="tx_t3eventscourse_domain_model_event.course_contacts" approved="yes" xml:space="preserve">
-			<source></source>
-			<target>Referenten/Dozenten/Moderatoren</target>
 		</trans-unit>
 		<trans-unit id="tx_t3eventscourse_domain_model_event.degree_type" approved="yes" xml:space="preserve">
 			<source></source>
@@ -213,22 +189,6 @@
 			<source></source>
 			<target>Export nach WIS</target>
 		</trans-unit>
-		<trans-unit id="tx_t3eventscourse_domain_model_event.goals" approved="yes" xml:space="preserve">
-			<source></source>
-			<target>Ziele</target>
-		</trans-unit>
-		<trans-unit id="tx_t3eventscourse_domain_model_event.image_gallery" approved="yes" xml:space="preserve">
-			<source></source>
-			<target>Impressionen</target>
-		</trans-unit>
-		<trans-unit id="tx_t3eventscourse_domain_model_event.list_view_image" approved="yes" xml:space="preserve">
-			<source></source>
-			<target>Bild für Listenansicht</target>
-		</trans-unit>
-		<trans-unit id="tx_t3eventscourse_domain_model_event.listview_exclusion" approved="yes" xml:space="preserve">
-			<source></source>
-			<target>Von Listenansicht ausschließen</target>
-		</trans-unit>
 		<trans-unit id="tx_t3eventscourse_domain_model_event.mode_instructionform" approved="yes" xml:space="preserve">
 			<source></source>
 			<target>Angebots-/Unterrichtsform</target>
@@ -285,17 +245,9 @@
 			<source></source>
 			<target>Neu im Angebot bis</target>
 		</trans-unit>
-		<trans-unit id="tx_t3eventscourse_domain_model_event.partner" approved="yes" xml:space="preserve">
-			<source></source>
-			<target>Kooperationspartner</target>
-		</trans-unit>
 		<trans-unit id="tx_t3eventscourse_domain_model_event.performances" approved="yes" xml:space="preserve">
-			<source></source>
+			<source>Schedules</source>
 			<target>Termine</target>
-		</trans-unit>
-		<trans-unit id="tx_t3eventscourse_domain_model_event.program_agenda" approved="yes" xml:space="preserve">
-			<source></source>
-			<target>Programmpunkte</target>
 		</trans-unit>
 		<trans-unit id="tx_t3eventscourse_domain_model_event.requirements" approved="yes" xml:space="preserve">
 			<source></source>
@@ -304,10 +256,6 @@
 		<trans-unit id="tx_t3eventscourse_domain_model_event.targetgroup_desc" approved="yes" xml:space="preserve">
 			<source></source>
 			<target>Zielgruppe näher definiert</target>
-		</trans-unit>
-		<trans-unit id="tx_t3eventscourse_domain_model_event.testimonials" approved="yes" xml:space="preserve">
-			<source></source>
-			<target>Testimonials</target>
 		</trans-unit>
 		<trans-unit id="tx_t3eventscourse_domain_model_performance" approved="yes" xml:space="preserve">
 			<source></source>
