--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -5,7 +5,7 @@
 			<generator>LFEditor</generator>
 		</header>
 		<body>
-		<trans-unit id="label.tx_extbase_type" xml:space="preserve">
+			<trans-unit id="label.tx_extbase_type" xml:space="preserve">
 			<source>Event type</source>
 		</trans-unit>
 		<trans-unit id="label.tx_extbase_type.0" xml:space="preserve">
@@ -61,6 +61,15 @@
 		</trans-unit>
 		<trans-unit id="tx_t3eventscourse_domain_model_certificate.title" xml:space="preserve">
 			<source>Title</source>
+		</trans-unit>
+			<trans-unit id="tx_t3eventscourse_domain_model_certificate.short_pas1045" xml:space="preserve">
+			<source>Short label PAS 1045</source>
+		</trans-unit>
+			<trans-unit id="tx_t3eventscourse_domain_model_certificate.short_qcat" xml:space="preserve">
+			<source>Short label Qcat</source>
+		</trans-unit>
+			<trans-unit id="tx_t3eventscourse_domain_model_certificate.link" xml:space="preserve">
+			<source>Link</source>
 		</trans-unit>
 		<trans-unit id="tx_t3eventscourse_domain_model_certificate.type" xml:space="preserve">
 			<source>Type</source>
