--- a/Resources/Private/Language/de.locallang_db.xlf
+++ b/Resources/Private/Language/de.locallang_db.xlf
@@ -201,55 +201,55 @@
 			<source></source>
 			<target>Export nach WIS</target>
 		</trans-unit>
-		<trans-unit id="tx_t3eventscourse_domain_model_event.mode_instructionform" approved="yes" xml:space="preserve">
+		<trans-unit id="tx_t3eventscourse_domain_model_event.mode_instruction_form" approved="yes" xml:space="preserve">
 			<source></source>
 			<target>Angebots-/Unterrichtsform</target>
 		</trans-unit>
-		<trans-unit id="tx_t3eventscourse_domain_model_event.mode_instructionform.1" approved="yes" xml:space="preserve">
+		<trans-unit id="tx_t3eventscourse_domain_model_event.mode_instruction_form.1" approved="yes" xml:space="preserve">
 			<source></source>
 			<target>Präsenzseminar</target>
 		</trans-unit>
-		<trans-unit id="tx_t3eventscourse_domain_model_event.mode_instructionform.103" approved="yes" xml:space="preserve">
+		<trans-unit id="tx_t3eventscourse_domain_model_event.mode_instruction_form.103" approved="yes" xml:space="preserve">
 			<source></source>
 			<target>- Vollzeit</target>
 		</trans-unit>
-		<trans-unit id="tx_t3eventscourse_domain_model_event.mode_instructionform.104" approved="yes" xml:space="preserve">
+		<trans-unit id="tx_t3eventscourse_domain_model_event.mode_instruction_form.104" approved="yes" xml:space="preserve">
 			<source></source>
 			<target>- Teilzeit</target>
 		</trans-unit>
-		<trans-unit id="tx_t3eventscourse_domain_model_event.mode_instructionform.105" approved="yes" xml:space="preserve">
+		<trans-unit id="tx_t3eventscourse_domain_model_event.mode_instruction_form.105" approved="yes" xml:space="preserve">
 			<source></source>
 			<target>- Wochenendveranstaltung</target>
 		</trans-unit>
-		<trans-unit id="tx_t3eventscourse_domain_model_event.mode_instructionform.106" approved="yes" xml:space="preserve">
+		<trans-unit id="tx_t3eventscourse_domain_model_event.mode_instruction_form.106" approved="yes" xml:space="preserve">
 			<source></source>
 			<target>- Blockunterricht</target>
 		</trans-unit>
-		<trans-unit id="tx_t3eventscourse_domain_model_event.mode_instructionform.107" approved="yes" xml:space="preserve">
+		<trans-unit id="tx_t3eventscourse_domain_model_event.mode_instruction_form.107" approved="yes" xml:space="preserve">
 			<source></source>
 			<target>- Inhouse/Firmenseminar</target>
 		</trans-unit>
-		<trans-unit id="tx_t3eventscourse_domain_model_event.mode_instructionform.11" approved="yes" xml:space="preserve">
+		<trans-unit id="tx_t3eventscourse_domain_model_event.mode_instruction_form.11" approved="yes" xml:space="preserve">
 			<source></source>
 			<target>- Selbststudium</target>
 		</trans-unit>
-		<trans-unit id="tx_t3eventscourse_domain_model_event.mode_instructionform.15" approved="yes" xml:space="preserve">
+		<trans-unit id="tx_t3eventscourse_domain_model_event.mode_instruction_form.15" approved="yes" xml:space="preserve">
 			<source></source>
 			<target>- E-Learning</target>
 		</trans-unit>
-		<trans-unit id="tx_t3eventscourse_domain_model_event.mode_instructionform.2" approved="yes" xml:space="preserve">
+		<trans-unit id="tx_t3eventscourse_domain_model_event.mode_instruction_form.2" approved="yes" xml:space="preserve">
 			<source></source>
 			<target>E-Learning/Blended Learning/Selbststudium</target>
 		</trans-unit>
-		<trans-unit id="tx_t3eventscourse_domain_model_event.mode_instructionform.3" approved="yes" xml:space="preserve">
+		<trans-unit id="tx_t3eventscourse_domain_model_event.mode_instruction_form.3" approved="yes" xml:space="preserve">
 			<source></source>
 			<target>- Blended Learning</target>
 		</trans-unit>
-		<trans-unit id="tx_t3eventscourse_domain_model_event.mode_instructionform.4" approved="yes" xml:space="preserve">
+		<trans-unit id="tx_t3eventscourse_domain_model_event.mode_instruction_form.4" approved="yes" xml:space="preserve">
 			<source></source>
 			<target>Fernunterricht/Fernstudium</target>
 		</trans-unit>
-		<trans-unit id="tx_t3eventscourse_domain_model_event.mode_instructionform.6" approved="yes" xml:space="preserve">
+		<trans-unit id="tx_t3eventscourse_domain_model_event.mode_instruction_form.6" approved="yes" xml:space="preserve">
 			<source></source>
 			<target>auf Anfrage / Sonstiges</target>
 		</trans-unit>
