--- a/Resources/Private/Language/de.locallang_mod_main.xlf
+++ b/Resources/Private/Language/de.locallang_mod_main.xlf
@@ -11,15 +11,15 @@
 		<body>
 			<trans-unit id="mlang_labels_tabdescr" approved="yes" xml:space="preserve">
 			<source>List of all Modules concerning Courses.</source>
-			<target>Liste aller Module für Schulungen.</target>
+			<target>Liste aller Module für Veranstaltungen.</target>
 		</trans-unit>
 		<trans-unit id="mlang_labels_tablabel" approved="yes" xml:space="preserve">
 			<source>Courses</source>
-			<target>Schulungen</target>
+			<target>Veranstaltungen</target>
 		</trans-unit>
 		<trans-unit id="mlang_tabs_tab" approved="yes" xml:space="preserve">
 			<source>Courses</source>
-			<target>Schulungen</target>
+			<target>Veranstaltungen</target>
 		</trans-unit>
 		</body>
 	</file>
