[TASK] localized labels for backend module added.

--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" target-language="de" datatype="plaintext" original="messages" date="2016-02-19T14:57:05Z">
+	<file source-language="en" target-language="de" datatype="plaintext" original="messages" date="2016-02-19T19:36:59Z">
 		<header>
 			<generator>LFEditor</generator>
 		</header>
@@ -64,6 +64,10 @@
 		<trans-unit id="button.save" approved="yes" xml:space="preserve">
 			<source>Save</source>
 			<target>Speichern</target>
+		</trans-unit>
+		<trans-unit id="button.search" approved="yes" xml:space="preserve">
+			<source>search</source>
+			<target>suchen</target>
 		</trans-unit>
 		<trans-unit id="button.send" approved="yes" xml:space="preserve">
 			<source>Send</source>
